# 5G-Anomaly-Detection

./: README.md  pfcal.sh  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters.yml  parameters_baseline_vectorization.yml  parameters_dissection.yml  parameters_gnn_conversion.yml  parameters_gnn_detection.yml  parameters_gnn_pretraining.yml  parameters_gnn_sampling.yml  parameters_gnn_training.yml  parameters_graph_construction.yml  parameters_pre_process.yml  parameters_vectorization.yml
notebooks/: Untitled.ipynb  exploration_apres_vectorisation_baseline_tfidf_gmm.ipynb  explore_graph.ipynb  explore_graph_after_vectorization.ipynb  explore_graph_after_vectorization_old_vectorization.ipynb  stat_thomas.py  test_thomas.ipynb  test_thomas.py  testing_files_subgraph.ipynb  verfication_files_after_vectorization.ipynb  word_encountered.json  word_encountered_unique.json
notebooks/evaluation/: address_distribution.ipynb  background_noise.ipynb  background_noise_attack.ipynb  background_noise_type.ipynb  benign_nature.ipynb  interaction_matching.ipynb  sequence_distrib.ipynb
notebooks/evaluation/old/: address_distribution.ipynb  background_noise_attack.ipynb
src/networkanomalydetection/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/networkanomalydetection/core/: dissection_clean.py  dissection_clusterize.py  feature_vectorization.py  vocabulary_making.py
src/networkanomalydetection/datasets/: pyshark_pcap_dataset.py  scapy_pcap_dataset.py
venv_5g/: pyvenv.cfg
venv_5g/Scripts/: activate  activate.bat  jsonpointer  pygrun
(+115 files in other folders)
